// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FieldPassword > render with disabled 1`] = `
<DocumentFragment>
  <div
    class="input-group"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="form-control"
      disabled=""
      id="dummy"
      name="dummy"
      path="dummy"
      type="password"
    />
    <button
      class="password-eye-toggle btn btn-outline-secondary"
      type="button"
    >
      <svg
        class="me-1"
        fill="currentColor"
        height="32"
        style="height: 1rem; width: 1rem;"
        width="32"
      >
        <use
          xlink:href="/src/assets/images/bootstrap-icons.svg#eye-fill"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`FieldPassword > render with place holder 1`] = `
<DocumentFragment>
  <div
    class="input-group"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="form-control"
      id="dummy"
      name="dummy"
      path="dummy"
      placeholder="placeholder"
      type="password"
    />
    <button
      class="password-eye-toggle btn btn-outline-secondary"
      type="button"
    >
      <svg
        class="me-1"
        fill="currentColor"
        height="32"
        style="height: 1rem; width: 1rem;"
        width="32"
      >
        <use
          xlink:href="/src/assets/images/bootstrap-icons.svg#eye-fill"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`FieldPassword > renders inside of model context 1`] = `
<DocumentFragment>
  <div
    class="input-group"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="form-control"
      id="dummy"
      name="dummy"
      path="dummy"
      type="password"
    />
    <button
      class="password-eye-toggle btn btn-outline-secondary"
      type="button"
    >
      <svg
        class="me-1"
        fill="currentColor"
        height="32"
        style="height: 1rem; width: 1rem;"
        width="32"
      >
        <use
          xlink:href="/src/assets/images/bootstrap-icons.svg#eye-fill"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`FieldPassword > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
